...
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        SizedBox(
                          width: 200.0,
                          child: TextFormField(
                            key: const ValueKey('Email_j9ij'),
                            controller: _model.emailTextController,
                            focusNode: _model.emailFocusNode,
                            autofocus: false,
                            obscureText: false,
                            decoration: InputDecoration(
                              isDense: true,
...
                                .asValidator(context),
                          ),
                        ),
                        SizedBox(
                          width: 200.0,
                          child: TextFormField(
                            key: const ValueKey('Password_960t'),
                            controller: _model.passwordTextController,
                            focusNode: _model.passwordFocusNode,
                            autofocus: false,
                            obscureText: !_model.passwordVisibility,
                            decoration: InputDecoration(
                              isDense: true,
...
                                .asValidator(context),
                          ),
                        ),
                        SizedBox(
                          width: 200.0,
                          child: TextFormField(
                            key: const ValueKey('ConfirmPassword_zf9g'),
                            controller: _model.confirmPasswordTextController,
                            focusNode: _model.confirmPasswordFocusNode,
                            autofocus: false,
                            obscureText: !_model.confirmPasswordVisibility,
                            decoration: InputDecoration(
                              isDense: true,
...
                                ),
                            elevation: 5.0,
                            borderRadius: BorderRadius.circular(8.0),
                          ),
                        ),
                        FFButtonWidget(
                          key: const ValueKey('SignUp_6uxr'),
                          onPressed: () async {
                            logFirebaseEvent('SIGNUPPAGE_PAGE_SignUp_ON_TAP');
                            logFirebaseEvent('SignUp_auth');
                            GoRouter.of(context).prepareAuthEvent();
                            if (_model.passwordTextController.text !=
                                _model.confirmPasswordTextController.text) {
...
