...
                        child: Column(
                          mainAxisSize: MainAxisSize.max,
                          children: [
                            SizedBox(
                              width: 200.0,
                              child: TextFormField(
                                key: const ValueKey('Email_d4q4'),
                                controller: _model.emailTextController,
                                focusNode: _model.emailFocusNode,
                                autofocus: false,
                                obscureText: false,
                                decoration: InputDecoration(
                                  isDense: true,
...
                            Column(
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                SizedBox(
                                  width: 200.0,
                                  child: TextFormField(
                                    key: const ValueKey('Password_tlj5'),
                                    controller: _model.passwordTextController,
                                    focusNode: _model.passwordFocusNode,
                                    autofocus: false,
                                    obscureText: !_model.passwordVisibility,
                                    decoration: InputDecoration(
                                      isDense: true,
...
                                    ),
                                  ),
                                ),
                              ],
                            ),
                            FFButtonWidget(
                              key: const ValueKey('LoginButton_hod7'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'LOGIN_PAGE_LoginButton_ON_TAP');
                                var shouldSetState = false;
                                logFirebaseEvent('LoginButton_auth');
                                GoRouter.of(context).prepareAuthEvent();
...
