...
                        borderRadius: BorderRadius.circular(8.0),
                      ),
                    ),
                    Align(
                      alignment: const AlignmentDirectional(-1.0, 0.0),
                      child: FFButtonWidget(
                        key: const ValueKey('infoButton_i5al'),
                        onPressed: () async {
                          logFirebaseEvent('HOME_PAGE_infoButton_ON_TAP');
                          var shouldSetState = false;
                          logFirebaseEvent('infoButton_backend_call');
                          _model.user = await UsersRecord.getDocumentOnce(
                              currentUserReference!);
...
                      mainAxisSize: MainAxisSize.max,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        Padding(
                          padding: const EdgeInsets.all(4.0),
                          child: Text(
                            'Total Points',
                            style:
                                FlutterFlowTheme.of(context).bodyLarge.override(
                                      fontFamily: 'Inter',
                                      letterSpacing: 0.0,
                                    ),
                          ),
...
